# Devansh-Aries-Study

./: README.md  flake.nix  pyproject.toml
mnist_nn/: network.py
projects/: Micrograd.ipynb  README.md  loan_prediction.ipynb
projects/bias_variance/: bias_variance.ipynb
projects/crowdflower_search/: crowdflower.ipynb
projects/mnist_nn/: FMNIST.ipynb  fmnist_final.ipynb  mnist_loader.py  network.py  torch_nn.py
projects/wids_datathon_2020/: eda.ipynb
